# x-project

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  makefile  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 001_initial.py  20260309_143914_replace_logo_keys_with_has_logo_flag.py
app/: main.py
app/api/: deps.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  documents.py  projects.py
app/core/: __init__.py  config.py  exceptions.py  security.py
app/db/: base.py  session.py
app/models/: __init__.py  document.py  project.py  project_access.py  user.py
app/repositories/: __init__.py  base.py  document.py  project.py  project_access.py  user.py
app/schemas/: __init__.py  auth.py  base.py  document.py  project.py  user.py
app/services/: __init__.py  auth.py  document.py  project.py  storage.py
deploy/: setup-ec2.sh
docker/: pg_hba.conf
docker/localstack-init/: init-s3.sh
lambda/image_processor/: handler.py
lambdas/: build_layer.sh
lambdas/image_processor/: handler.py  requirements.txt
scripts/: seed.py
terraform/: .terraform.lock.hcl  ec2.tf  iam.tf  lambda.tf  outputs.tf  providers.tf  s3.tf  terraform.tfvars.example  user-data.sh  variables.tf
tests/: conftest.py
tests/integration/: test_auth.py  test_projects.py
tests/unit/: test_auth_service.py  test_schemas.py  test_security.py
